--- a/monitorProcSAP/src/main/webapp/index.html
+++ b/monitorProcSAP/src/main/webapp/index.html
@@ -1,10 +1,34 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML> 
 <html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Monitor Procesos SAP</title>
-</head>
-<body>
-<p> Monitor  Procesos</p>
-</body>
+
+    <head>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Monitor Procesos</title>
+
+        <script src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
+                id="sap-ui-bootstrap"
+                data-sap-ui-libs="sap.m,sap.ui.layout"
+                data-sap-ui-resourceroots='{"monitorProcSAP": "./"}'
+                data-sap-ui-theme="sap_bluecrystal"
+                data-sap-ui-xx-bindingSyntax="complex"
+                data-sap-ui-compatVersion="edge"
+				data-sap-ui-preload="async">
+        </script>
+
+        <script>
+            sap.ui.getCore().attachInit(function() {
+                new sap.m.Shell({
+                    app: new sap.ui.core.ComponentContainer({
+                        name: "monitorProcSAP",
+                        height: "100%"
+                    })
+                }).placeAt("content");
+            });
+        </script>
+    </head>
+
+    <body class="sapUiBody" role="application">
+        <div id="content"></div>
+    </body>
+
 </html>
